# Kmeans-cpp

./: .gitignore  CMakeLists.txt  README.md  input.txt
include/: cluster.h  io.h  kmeans.h  point.h
src/: io.cpp  kmeans.cpp  main.cpp
tests/: test.cpp
